# onvif-gsoap

./: README.md
OnvifClient_gSOAP/: CMakeLists.txt  Dockerfile
test/: CMakeLists.txt  Dockerfile
test/deviceBinding/: CMakeLists.txt
